--- a/latest-post.html
+++ b/latest-post.html
@@ -2,4 +2,9 @@
 section-type: latest-post
 title: Blog
 ---
-## Latest Blog Post Up
+## Latest Blog Post.
+
+Click on Archive to see the rest of the blog posts.
+
+Click on the title of the blog post, to read the full blog.
+
